[package]
name = "markets"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
playwright = "0.0.20"
anyhow = "1.0"
select = "0.5"
csv = "1.1"
chrono = "0.4"
rand = "0.8"
regex = "1"